# HouseApp

./: .gitignore  CMakeLists.txt  README.md  raspberry_runner.sh  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
Config/: general_config.json  web_data.json
Src/: Add.cpp  Add.h  ChatSender.cpp  ChatSender.h  DatabaseConnector.cpp  DatabaseConnector.h  Executor.cpp  Executor.h  GeneralConfig.cpp  GeneralConfig.h  Log.cpp  Log.h  WebConnector.cpp  WebConnector.h  WebConnectorCurl.cpp  WebConnectorCurl.h  WebConnectorJS.cpp  WebConnectorJS.h  WebDownloader.cpp  WebDownloader.h  WebParser.cpp  WebParser.h  WebParserConfig.cpp  WebParserConfig.h  main.cpp
_config/: web_data.json
config/: general_config.json  web_data.json
include/: DatabaseConnector.h
scripts/: scrape.py
